@@ -23,6 +23,7 @@ import java.io.IOException;
 
 import org.apache.hadoop.conf.Configuration;
 import org.apache.hadoop.fs.Path;
+import org.apache.hadoop.fs.FileSystem;
 import org.apache.hadoop.fs.FSDataInputStream;
 
 import org.apache.avro.file.SeekableInput;
@@ -34,26 +35,36 @@ public class FsInput implements Closeable, SeekableInput {
 
   /** Construct given a path and a configuration. */
   public FsInput(Path path, Configuration conf) throws IOException {
-    this.len = path.getFileSystem(conf).getFileStatus(path).getLen();
-    this.stream = path.getFileSystem(conf).open(path);
+    this(path, path.getFileSystem(conf));
   }
 
+  /** Construct given a path and a {@code FileSystem}. */
+  public FsInput(Path path, FileSystem fileSystem) throws IOException {
+    this.len = fileSystem.getFileStatus(path).getLen();
+    this.stream = fileSystem.open(path);
+  }
+
+  @Override
   public long length() {
     return len;
   }
 
+  @Override
   public int read(byte[] b, int off, int len) throws IOException {
     return stream.read(b, off, len);
   }
 
+  @Override
   public void seek(long p) throws IOException {
     stream.seek(p);
   }
 
+  @Override
   public long tell() throws IOException {
     return stream.getPos();
   }
 
+  @Override
   public void close() throws IOException {
     stream.close();
   }
